--- a/Plexi/Plexi.csproj
+++ b/Plexi/Plexi.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="Plexi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
